crates/atlas-runtime/tests/errors/unterminated_string.atl
// Test: Unterminated string literal (AT1002)
let message = "This string never ends
